--- a/index.html
+++ b/index.html
@@ -187,10 +187,10 @@
 
     <footer class="white-section" id="footer">
       <div class="container-fluid">
-       <i class="footfav fa-brands fa-twitter"></i>
-        <i class="footfav fa-brands fa-facebook"></i>
-        <i class="footfav fa-brands fa-instagram"></i>
-        <i class="footfav fa-solid fa-envelope"></i>
+
+      <a class="footfav" href="https://www.linkedin.com/in/abdulwasiu-abubakar-419511238">Linkedin</a>
+      <a class="footfav" href="https://web.facebook.com/abdulwasiuabubakr94">Facebook</a>
+      <a class="footfav" href="https://www.instagram.com/abdulwasiuabubakr94/">Instagram</a>
         <p>© Copyright TinDog</p>
       </div>
     </footer>
